--- a/Front_End/pages/adminPages/PaymentDetails.html
+++ b/Front_End/pages/adminPages/PaymentDetails.html
@@ -357,6 +357,33 @@
                                 <div class="card-body">
                                     <!-- start row -->
                                     <div class="row">
+                                        <!-- start col -->
+                                        <div class="col-xl-12">
+                                            <div class="row mt-3 mt-md-2 mt-lg-4 justify-content-around"
+                                                 style="height: 490px;">
+                                                <div class="col-11 justify-content-around sectionBorder"
+                                                     style="height: 460px; background: white">
+                                                    <div class="table-responsive customerTableDiv overflow-auto "
+                                                         style="height: 470px;">
+                                                        <table class="table text-nowrap table-light table-striped table-bordered table-hover">
+                                                            <thead class="text-dark table-danger text-center  table-bordered sticky-top">
+                                                            <tr>
+                                                                <th scope="col">Payment ID</th>
+                                                                <th scope="col">Rent ID</th>
+                                                                <th scope="col"> Customer ID</th>
+                                                                <th scope="col">Type</th>
+                                                                <th scope="col">Date</th>
+                                                                <th scope="col">time</th>
+                                                                <th scope="col">Amount (Rs.)</th>
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody id="paymentTable"></tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- end col-->
                                     </div>
                                     <!-- end row -->
                                 </div>
