--- a/Front_End/pages/adminPages/IncomeDetails.html
+++ b/Front_End/pages/adminPages/IncomeDetails.html
@@ -348,6 +348,33 @@
 
                 <section class="section">
                     <div class="row">
+
+                        <div class="col-lg-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Daily Income</h5>
+                                    <div class="row mt-3 mt-md-2 mt-lg-4 justify-content-around"
+                                         style="height: 340px;">
+                                        <div class="col-11 justify-content-around sectionBorder"
+                                             style="height: 325px; background: white">
+                                            <div class="table-responsive customerTableDiv overflow-auto "
+                                                 style="height: 315px;">
+                                                <table class="table text-nowrap table-light table-striped table-bordered table-hover">
+                                                    <thead class="text-dark table-danger text-center  table-bordered">
+                                                    <tr>
+                                                        <th scope="col">Date</th>
+                                                        <th scope="col">Bookings</th>
+                                                        <th scope="col"> Daily Income</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody id="dailyIncomeTable"></tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
 
