--- a/Front_End/pages/adminPages/IncomeDetails.html
+++ b/Front_End/pages/adminPages/IncomeDetails.html
@@ -488,7 +488,6 @@
     <!-- End Footer -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
-
     <!-- Vendor JS Files -->
     <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="../../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
@@ -497,10 +496,12 @@
     <script src="../../assets/vendor/chart.js/chart.umd.js"></script>
     <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
     <script src="../../assets/vendor/chart.js/canvasjs.min.js"></script>
+
     <!-- Template Dashboard Main JS File -->
     <script src="../../assets/js/dashboardMain.js"></script>
 
     <!-- Controller JS File -->
+    <script src="../../controller/IncomeReportController.js"></script>
     <script src="../../controller/DashBoardController.js"></script>
 
     <!-- Util JS File -->
