--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -56,15 +56,17 @@
   <section id="hero" class="hero d-flex align-items-center section-bg">
   <div class="container">
     <div class="row justify-content-between gy-5">
-      <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-        <h2 data-aos="fade-up">Easy Way To <br>Rent A Car</h2>
-        <p data-aos="fade-up" data-aos-delay="100">Search & Compare the World's Leading <span style=" font-weight: 600;">Car Rental</span> Suppliers Today! No Credit Card Fees. We Speak Your Language. Unbeatable Prices. Destinations: Spain, France, Italy, UK, USA, Portugal, Greece, Australia, Ireland, Switzerland.</p>
+      <div class="col-lg-5 order-3 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
+        <h2 data-aos="fade-up">Drive Your Dreams, Rent with Easy</h2>
+        <p data-aos="fade-up" data-aos-delay="100">
+          "Welcome to <span style=" font-weight: 600;">Easy Car Rental</span>, your gateway to hassle-free car rentals. From business trips to weekend escapes, we've got the perfect car for you. Experience the open road with ease as we simplify your rental journey.
+        </p>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
           <a class="btn-Register-customer-new" href="#Register-customer-new">Register</a>
         </div>
       </div>
-      <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-        <img src="assets/img/cars/bmwi8.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
+      <div class="col-lg-5 order-1 order-lg-5 text-center text-lg-start">
+        <img src="assets/img/cars/index9.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300" style="width: 100%">
       </div>
     </div>
   </div>
@@ -85,41 +87,30 @@
 
       <div class="row gy-4">
         <div class="col-lg-7 position-relative about-img"
-             data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/about-1.jpg); ">
+             data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/abo1.jpeg); ">
         </div>
         <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
           <div class="content ps-0 ps-lg-5">
             <p class="fst-italic">
-              Welcome To Easy Car Rental We Provide Everything You Need To A Car
+              Welcome to <span style=" font-weight: 600;">Easy Car Rental</span>, your gateway to convenient and flexible car rentals. Our service is designed with you in mind, offering a range of features to make your journey as smooth as possible. Here are five key features that set us apart:
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> A customer comes to the website and register.
+              <li><i class="bi bi-car-front-fill"></i> <span style=" font-weight: 600;"> Diverse Fleet:</span> From compact cars to spacious SUVs, we provide a wide variety of vehicles to cater to your unique needs.
               </li>
-              <li><i class="bi bi-check2-all"></i> Then, the customer can select a car, Pick up time and
-                date, and other required details.
+              <li><i class="bi bi-car-front-fill"></i> <span style=" font-weight: 600;"> Online Booking:</span> Our easy-to-use online platform lets you book your car quickly and effortlessly, ensuring a hassle-free reservation process.
               </li>
-              <li><i class="bi bi-check2-all"></i> The customer has to make the Loss Damage Waiver payment
-                to the given bank account information of the car rental and upload the bank slip or the
-                bank confirmation to the dedicated field in
-                the renting view.
+              <li><i class="bi bi-car-front-fill"></i> <span style=" font-weight: 600;"> Transparent Pricing:</span> We believe in straightforward pricing, so you'll always know the cost upfront with no hidden fees.
               </li>
-              <li><i class="bi bi-check2-all"></i> If a driver is requested by the customer, a driver is
-                randomly assigned to accommodate the customer.
+              <li><i class="bi bi-car-front-fill"></i> <span style=" font-weight: 600;"> 24/7 Support:</span> Our dedicated support team is available around the clock to assist you, should you have any questions or require assistance during your rental.
               </li>
-              <li><i class="bi bi-check2-all"></i> After the customer returns the car, he/she has to make
-                the payment and the rental process will be finalized.
+              <li><i class="bi bi-car-front-fill"></i> <span style=" font-weight: 600;"> Flexible Rental Options:</span> Choose from various rental periods to match your schedule, whether it's a few hours, a day, a week, or more.
               </li>
             </ul>
             <p>
-              If the vehicle is unharmed the Loss Damage Waiver will be returned in full to the customer.
-              <br><span style="color: var(--color-primary-red)">(Engine faults and malfunctions in the car will not count when deductions are made
-                            from the Loss Damage Waiver)</span>
+              <span style=" font-weight: 600;">Your journey starts here.</span>
+              <br>
+              At <span style=" font-weight: 600;">Easy Car Rental</span>, we're committed to providing you with a seamless and enjoyable car rental experience. Our diverse fleet, user-friendly booking system, transparent pricing, round-the-clock support, and flexible rental options are just some of the ways we aim to make your travel plans stress-free. Join us and embark on your next adventure with confidence. Book your car today and experience the freedom of the open road.
             </p>
-
-            <div class="position-relative mt-4">
-              <img alt="" class="img-fluid" src="assets/img/about-image-2.jpg">
-              <a class="glightbox play-btn" href=""></a>
-            </div>
           </div>
         </div>
       </div>
@@ -178,11 +169,19 @@
         <!-- Basic Pagination -->
         <nav aria-label="Page navigation">
           <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="">Previous</a></li>
-            <li aria-current="page" class="page-item active"><a class="page-link" href="">1</a></li>
-            <li class="page-item"><a class="page-link" href="">2</a></li>
-            <li class="page-item"><a class="page-link" href="">3</a></li>
-            <li class="page-item"><a class="page-link" href="">Next</a></li>
+            <li class="page-item">
+              <a class="page-link text-bg-dark" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="page-link text-dark" href="#">1</a></li>
+            <li class="page-item"><a class="page-link text-dark" href="#">2</a></li>
+            <li class="page-item"><a class="page-link text-dark" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link text-bg-dark" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
           </ul>
         </nav>
         <!-- End Basic Pagination -->
@@ -203,7 +202,7 @@
 
         <div class="col-lg-4 register-img sectionBorder"
              data-aos="zoom-out" data-aos-delay="200"
-             style="background-image: url(assets/img/reg_Customer_main.jpg);"></div>
+             style="background-image: url(assets/img/Customer_form.jpeg);"></div>
 
         <div class="col-lg-8 d-flex align-items-center register-form-bg sectionBorder">
           <form action="customer" class="reg-customer-form" data-aos="fade-up" data-aos-delay="100"
@@ -340,7 +339,7 @@
             <i class="icon bi bi-telephone flex-shrink-0 "></i>
             <div>
               <h3>Call Us</h3>
-              <p>+94 11 420 7354</p>
+              <p>+94 41 984 174</p>
             </div>
           </div>
         </div>
@@ -370,13 +369,15 @@
                      required type="email ">
             </div>
           </div>
-          <div class="form-group ">
-            <input class="form-control " id="contactSubject " name="subject " placeholder="Subject "
-                   required type="text ">
-          </div>
-          <div class="form-group ">
-                    <textarea class="form-control " name="message " placeholder="Message " required
-                              rows="5 "></textarea>
+          <div class="row ">
+            <div class=" col-xl-6 form-group ">
+              <textarea class="form-control " id="contactSubject " name="subject " placeholder="Subject "
+                     rows="3"></textarea>
+            </div>
+            <div class="col-xl-6 form-group ">
+                      <textarea class="form-control " name="message " placeholder="Message " required
+                                rows="3"></textarea>
+            </div>
           </div>
           <div class="my-3 ">
             <div class="loading ">Loading</div>
@@ -421,7 +422,7 @@
           <i class="bi bi-clock icon "></i>
           <div>
             <h4>Opening Hours</h4>
-            <p><strong> Mon - Sat : 7.30AM-7.30PM </strong><br>Sunday : Closed</p>
+            <p><strong> Mon - Sun : 24/7 </strong></p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 footer-links ">
@@ -437,19 +438,19 @@
 
     <ul class="nav justify-content-center mt-2 ">
       <li class="nav-item ">
-        <a class="nav-link text " href="#">Home</a>
+        <a class="nav-link text-light" href="#">Home</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text " href="#about">About</a>
+        <a class="nav-link text-light " href="#about">About</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text " href="#cars">Car</a>
+        <a class="nav-link text-light " href="#cars">Car</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text " href="#contact">Contact</a>
+        <a class="nav-link text-light " href="#contact">Contact</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text " href="#Register-customer-new">Register</a>
+        <a class="nav-link text-light " href="#Register-customer-new">Register</a>
       </li>
     </ul>
     <div class="container ">
